Ingestor com virtual threads e semaforo